# Django

./: README.md  db.sqlite3  package-lock.json  pyproject.toml
backend/: settings.py  urls.py
frontend/: README.md  package-lock.json  package.json
