[tool.poetry]
name = "projeto-django-nuxt"
version = "1.0.0"
description = "Projeto simples de integracao Django-Nuxt"
authors = ["Gustavo Barbosa Espindula"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
