[tool.poetry]
name = "projeto-django-nuxt"
version = "1.0.0"
description = "Projeto simples de integracao Django-Nuxt"
authors = ["Gustavo Barbosa Espindula"]

[tool.poetry.dependencies]
python = ">=3.6, <3.9"
django = "^3.0.7"
djangorestframework = "^3.11.0"
djangorestframework-simplejwt = "^4.4.0"
django-cors-headers = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
